current_user/home sign in/routes

--- a/app/views/home.html.erb
+++ b/app/views/home.html.erb
@@ -2,6 +2,8 @@
 
 <h1> Welcome To Twin Tiers Cinderella Softball League </h1> <br><br>
 
-<button_link "Create Acoount"> 
+<%= button_link "Create Account"> 
 
-<button_link "Log In"> 
+<%= link_to ('Log in with Facebook!', '/auth/facebook') %> 
+
+<%= button_link "Log In"> 
