--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -2,8 +2,8 @@
 
 <h1> Welcome To Twin Tiers Cinderella Softball League </h1> <br><br>
 
-<%= button_link "Create Account"> 
+<%= button_to  "Create Account" %> 
 
-<%= link_to ('Log in with Facebook!', '/auth/facebook') %> 
 
-<%= button_link "Log In"> 
+
+<%= button_to "Log In" %> 
