--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
     <%= f.label :name %> 
     <%= f.text_field :name %> <br> 
     <%= f.label :password %> 
-    <%= f.text_field :password %> 
+    <%= f.text_field :password_digest %> 
 
     <%= f.submit %> 
 <% end %> 
