nav bar & sign up

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -1,9 +1,10 @@
-<img src="https://media.graytvinc.com/images/810*607/softball-mgn.jpg">
+<div class="topnav">
+  <a href="users/new">Create Account</a>
+  <a href="users/login">Login</a>
+</div>
+
 
 <h1> Welcome To Twin Tiers Cinderella Softball League </h1> <br><br>
 
-<%= button_to  "Create Account" %> 
+<img src="https://media.graytvinc.com/images/810*607/softball-mgn.jpg">
 
-
-
-<%= button_to "Log In" %> 
