--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,12 @@
+<h1> Create Account </h1> 
+
 <%= form_for(@user) do |f| %> 
     <%= f.label :name %> 
-    <%= f.text_field :name %> <br> 
+    <%= f.text_field :name %> <br>
+    <%= f.label :email %> 
+    <%= f.text_field :email %> <br>  
     <%= f.label :password %> 
-    <%= f.text_field :password_digest %> 
+    <%= f.password_field :password_digest %><br><br> 
 
     <%= f.submit %> 
 <% end %> 
