players new/index

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -2,6 +2,6 @@
     <%= team.town %> 
     <%= team.coach %> 
     <%= team.color %> 
-    <%= team.age_group %> 
+    <%= link_to team.age_group, teams_path(team) %> 
 <% end %> 
 
