--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -4,6 +4,8 @@
   <div class="fb-login-button" data-width="" data-size="small" data-button-type="login_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false"></div>
 </div>
 
+<%= link_to "Login via Facebook", "/auth/facebook" %> 
+
 
 <h1> Welcome To Twin Tiers Cinderella Softball League </h1> <br><br>
 
