--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -6,6 +6,17 @@
 
 <%= link_to "Login via Facebook", "/auth/facebook" %> 
 
+<fb:login-button 
+  scope="public_profile,email"
+  onlogin="checkLoginState();">
+</fb:login-button>
+
+function checkLoginState() {
+  FB.getLoginStatus(function(response) {
+    statusChangeCallback(response);
+  });
+}
+
 
 <h1> Welcome To Twin Tiers Cinderella Softball League </h1> <br><br>
 
