nested resources cont

--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -5,6 +5,12 @@
 
 <br><br> 
 
+<h3> Players </h3> 
+  <% @team.players.each do |player| %> 
+    <%= player.name %> 
+  <% end %> 
+
+<%= link_to "Add Players", new_team_player_path(@team) %> 
 <%= link_to "Edit Team", edit_team_path(@team) %> <br> 
 <%= link_to "All Teams", teams_path %> <br>
 <%= button_to "Delete", @team, :method => :delete %> 
