--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,6 +5,6 @@
     <%= f.text_field :email %> <br>  
     <%= f.label :password %> 
     <%= f.password_field :password_digest %><br><br> 
-
+    <%= f.hidden_field :authenticity_token, form_authenticity_token %> 
     <%= f.submit %> 
 <% end %> 
