--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -3,7 +3,7 @@
     <%= text_field_tag :name %> <br>
     <label> Email: </label> 
     <%= text_field_tag :email %> <br>  
-    <label> :password </label> 
+    <label> Password: </label> 
     <%= password_field_tag :password_digest %><br><br> 
     
     
