--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,18 +2,13 @@
 
 <%= button_to "View All Teams", teams_path %> <br> 
 
-<%= button_to "View my Teams", user_teams_path(@user) %> <br> 
+<%= button_to "View my Teams", teams_path(@user) %> <br> 
 
-<%= button_to "Register New Team", new_user_team_path(@user) %> <br> 
+<%= button_to "Register New Team", new_team_path(@user) %> <br> 
 
-<%= button_to "Register New Players", new_team_player_path(@user.team) %> <br> 
+<%= button_to "Register New Players", new_player_path(@user) %> <br> 
 
-<h4> Your Teams </h4> <br>
- <% @user.teams.each do |team| %> 
-    <%= team.town %> 
-    <%= link_to team.color, teams_path(@team) %> 
-    <%= team.age_group %> 
-<% end %> 
+
 
 
 <%= button_to "Logout", logout_path %> 
