--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -3,6 +3,8 @@
 <%= form_for(@player) do |f| %> 
   <%= f.hidden_field :team_id %>
 
+  <%= render partial: 'layouts/errors', locals: {object.@player} %>
+
     <%= f.label :name %> 
     <%= f.text_area :name %> <br>
     <%= f.label :age %> 
