--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,19 +1,3 @@
 <h1> New Player </h1>
 
-<%= form_for(@player) do |f| %> 
-  
-<% if @player.errors.any? %>
-  <div id = "error explanation">  
-    <%= render partial: 'layouts/errors', locals: {object:@player} %>
-  </div>
-  <% end %> 
-
-    <%= f.label :name %> 
-    <%= f.text_area :name %> <br>
-    <%= f.label :age %> 
-    <%= f.number_field :age %> <br>
-
-    <%= f.hidden_field :team_id %> 
-
-    <%= f.submit %> 
-<% end %> 
+<%= render 'form' %> 
