--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -1,16 +1,3 @@
 <h1> Register New Team </h1> 
 
-<%= form_for(@team) do |f| %> 
-   <%= f.hidden_field :user_id %> 
-
-    <%= f.label :town %>
-    <%= f.text_field :town %> <br> 
-    <%= f.label :coach %> 
-    <%= f.text_field :coach %> <br> 
-    <%= f.label :color %> 
-    <%= f.text_field :color %> <br>
-    <%= f.label :age_group %> 
-    <%= f.number_field :age_group %><br> 
-
-    <%= f.submit %> 
-<% end %> 
+<%= render 'form' %> 
