--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,9 +1,9 @@
-<h1><%= @team.town %></h1><br> 
-<h2><%= @team.coach %></h2><br> 
-<h2><%= @team.color %></h2><br> 
-<h2><%= @team.age_group %></h2><br> 
+<h2><%= @team.town %></h2> - 
+<h2><%= @team.coach %></h2> - 
+<h2><%= @team.color %></h2> - 
+<h2><%= @team.age_group %></h2> - 
 
-<br><br> 
+<br> 
 
 <h3> Players </h3> 
   <% @team.players.each do |player| %> 
