--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <h1> Welcome <%= @user %> </h1> 
 
-<%= button_to "View All Teams", teams_path %> <br> 
+<%= button_to "View All Teams", teams_path %> <br>
+
+<%= button_to "Register New Team", new_team_path %> <br> 
 
 <%= button_to "View my Teams", teams_path(@user) %> <br> 
 
