--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 
-<h1> All the Coaches </h1>
+<h1> All the Coaches </h1><br><br>
 
 <% @users.each do |user| %> 
   <h3> <%= link_to user.name, user_path(user) %> </h3> 
