--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,10 @@
-<h1> Welcome <%= @user %> </h1> 
+<h1> Welcome <%= @user %> </h1> <br>
 
 <%= button_to "View All Teams", teams_path %> <br>
 
 <%= button_to "Register New Team", new_team_path %> <br> 
 
 <%= button_to "View my Teams", teams_path(@user) %> <br> 
-
-<%= button_to "Register New Team", new_team_path(@user) %> <br> 
 
 <%= button_to "Register New Players", new_player_path(@user) %> <br> 
 
