--- a/app/views/players/edit.html.erb
+++ b/app/views/players/edit.html.erb
@@ -1,6 +1,10 @@
 <%= render 'layouts/navbar' %>
 
+<body class="text-center">
+
 <h1> Edit <%= @player.name %> 
 
 <%= render 'form' %> 
+
+</body>
 
