--- a/app/views/players/new.html.erb
+++ b/app/views/players/new.html.erb
@@ -1,5 +1,9 @@
 <%= render 'layouts/navbar' %> 
 
+<body class="text-center">
+
 <h1> New Player </h1>
 
-<%= render 'form' %> 
+<%= render 'form' %>
+
+</body>
