--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,6 +1,6 @@
-<div class="topnav"> 
+<nav class="topnav" style="background-color: green"> 
   <a href="teams/index">View All Teams</a> 
   <a href="users_teams_path">View My Teams</a>
   <a href="players/new">Register New Player</a>
   <a href="/logout"> Logout </a> 
-</div>  
+</nav>  
