--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -1,10 +1,13 @@
 <%= render 'layouts/navbar' %>
 
+<body class="text-center">
+
 <h1> All Players Registered </h1> 
 
 <% @players.each do |player| %> 
     Name: <%= link_to player.name, player_path(player) %> <br> 
     Age : <%= player.age %> <br> 
-    
-<% end %> 
+<% end %>
+
+</body>
 
