--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -1,8 +1,12 @@
 <%= render 'layouts/navbar' %><br><br>
 
+<body class="text-center">
+
 <h5><%= @player.name %></h5><br> 
 <h5><%= @player.age %></h5><br> 
 <h5><%= @player.team.town %></h5><br> 
 <h5><%= @player.team.coach %></h5><br>
-<h5><%= @player.team.color %></h5><br> 
+<h5><%= @player.team.color %></h5><br>
+
+</body>
 
