--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,5 +1,6 @@
 <%= render 'layouts/navbar' %>
 
+<body class="text-center">
 <h3><%= @team.town %></h3>  
 <h3><%= @team.coach %></h3>  
 <h3><%= @team.color %></h3>  
@@ -14,7 +15,7 @@
   <% end %>
   </ul>  <br>
 
-  
+</body>
 
 <%= link_to "Add Players", new_team_player_path(@team) %> <br>
 <%= link_to "Edit Team", edit_team_path(@team) %> <br> 
