--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<body class="text-center">
+
 <h1> Create Account </h1> 
 
 <%= form_for(@user) do |f| %>
@@ -22,3 +24,4 @@
 
    <%= f.submit "Create Account" %> 
 <% end %> 
+</body>
