--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<body class="text-center"> 
+
 <h1> Welcome <%= @user %> </h1> <br>
 
 <%= button_to "View All Teams", teams_path %> <br>
@@ -11,7 +13,9 @@
 
 
 
-<%= button_to "Logout", logout_path %> 
+<%= button_to "Logout", logout_path %>
+
+</body>
 
 
 
