--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="topnav" style="background-color: green"> 
-  <a href="teams/index">View All Teams</a> 
+  <a href="teams_path(@user)">View All Teams</a> 
   <a href="users_teams_path">View My Teams</a>
   <a href="players/new">Register New Player</a>
   <a href="/logout"> Logout </a> 
