--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,13 @@
  *= require_self
  */
 
+ 
+.field_with_errors {
+    padding: 2px;
+    background-color: red;
+    display: table;
+  }
+
  .form-signin {
     width: 100%;
     max-width: 330px;
