--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -5,6 +5,14 @@
 
 <h1> All Teams </h1> 
 
+<div> 
+  <h4> Filter by Town: </h4> 
+     <%= form_tag('/teams', method: 'get') do %> 
+        <%= select_tag "town", options_from_collection_for_select(Team.all,"id","town") %> 
+        <%= submit_tag "Filter" %> 
+     <% end %> 
+</div> 
+
 <% @teams.each do |team| %> 
     Town: <%= team.town %> <br>
     Coach: <%= team.coach %> <br>
