--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
 
 <%= button_to "Register New Team", new_team_path %> <br> 
 
-<%= button_to "View my Teams", teams_path(@user) %> <br> 
+<%= button_to "View my Teams", teams_path(session[:user_id]) %> <br> 
 
 <%= button_to "Register New Players", new_player_path(@user) %> <br> 
 
