--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -15,7 +15,8 @@
         <%= f.label :age %> 
         <%= f.number_field :age %> <br>
     
-        <%= f.hidden_field :team_id %> 
+        <%= f.hidden_field :team_id %>
+        <%= f.hidden_field :user_id %>  
     
         <%= f.submit %> 
     <% end %> 
