--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -8,5 +8,8 @@
 <h5><%= @player.team.coach %></h5><br>
 <h5><%= @player.team.color %></h5><br>
 
+<%= button_to "Edit Player", edit_player_path(@player) %> 
+<%= button_to "Delete", @player, :method => :delete %> 
+
 </body>
 
