--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,15 +4,7 @@
 
 <%= form_for(@user) do |f| %>
 
-   <% if @user.errors.any? %> 
-     <div id= "error_explanation"> 
-         <ul>
-            <% @user.errors.full_messages do |message| %> 
-               <li><%= message %></li>
-            <% end %>
-         </ul> 
-      </div>
-   <% end %> 
+   <%= render 'layouts/errors', object: @user %>
 
    <%= f.label :name %>  
    <%= f.text_field :name %> <br>
