--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -1,14 +1,6 @@
 <%= form_for(@team) do |f| %> 
 
-    <% if @team.errors.any? %> 
-        <div id= "error_explanation"> 
-            <ul>
-                <% @team.errors.full_messages do |message| %> 
-                    <li><%= message %></li>
-                <% end %>
-            </ul> 
-        </div>
-    <% end %> 
+    <%= render 'layouts/errors', object: @team %>
 
     <%= f.hidden_field :user_id %> 
      <%= f.label :town %>
