--- a/app/views/layouts/_errors.html.erb
+++ b/app/views/layouts/_errors.html.erb
@@ -1,5 +1,6 @@
 <% if object.errors.any? %>
   <div id = "error_explanation">
+    <div class= "field_with_errors"
       The form contains <%= pluralize(object.errors.count, "error") %>.
     </div>
     <ul>
