--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
-<%= render 'layouts/background' %> 
 
-<body class="text-center"> 
+<body class="text-center" {
+    background-image: url("https://lh3.googleusercontent.com/proxy/mnCL25XDfO1MYQt4AiYjWE3ku_w-Jqi6KlQaU-Ot7kWZjBrgQatpS8Zl39rcmYc3iIaE2Z4kUAfv9lfdn5eax9MkrmeKIF-ZNyuYNMv9FkpHyoZeyPSljadqtwVYjyitPSU69P7NumSXm5vW68CJTNPADYEeJ9zLHkCfpjFded1IZ1PpetfIk4ahsCXgzw");
+    background-color: #cccccc;
+   }> 
 
 <h1> Welcome <%= @user %> </h1> <br>
 
