--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -8,7 +8,7 @@
         <%= f.number_field :age %> <br>
     
         <%= f.hidden_field :team_id %>
-          
+        <%= f.hidden_field :user_id %>   
     
         <%= f.submit %> 
     <% end %> 
