player_team model / associations

--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -6,8 +6,8 @@
   
         <%= f.label :name %> 
         <%= f.text_area :name %> <br>
-        <%= f.label :age %> 
-        <%= f.number_field :age %> <br>
+        <%= f.label :date_of_birth %> 
+        <%= f.number_field :date_of_birth %> <br>
     
         <%= f.hidden_field :team_id %>
         <%= f.hidden_field :user_id %>   
