player_team views

--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -20,7 +20,7 @@
       Town: <%= team.town %> <br>
       Coach: <%= team.coach %> <br>
       Color: <%= team.color %> <br>
-      Age Group: <%= link_to team.age_group, team_path(team) %><br><br> 
+      Age Group: <%= link_to team.age_group, team_path(team) %>U<br><br> 
    <% end %>
 </div> 
 
