--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -4,7 +4,7 @@
 <h3><%= @team.town %></h3>  
 <h3><%= @team.coach %></h3>  
 <h3><%= @team.color %></h3>  
-<h3><%= @team.age_group %></h3>  
+<h3><%= @team.age_group %>U</h3>  
 
 <br> 
 
