nested attributes / routes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,8 @@
 
  <!-- <%= button_to "View All Teams", teams_path(@user) %> <br> -->
 
-<%= button_to "Register New Team", new_team_path %> <br> 
+<%= button_to "Register New Team", new_team_path %> <br>
+<%= button_to "Register New Player", new_player_path %> <br>  
 
 </body> 
 
