--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -7,7 +7,7 @@
         <%= f.label :name %> 
         <%= f.text_area :name %> <br>
         <%= f.label :date_of_birth %> 
-        <%= f.number_field :date_of_birth %> <br>
+        <%= f.date_select :date_of_birth %> <br>
     
          <%= f.submit %> 
     <% end %> 
