--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -6,7 +6,7 @@
 
 <% @players.each do |player| %> 
     Name: <%= link_to player.name, player_path(player) %> <br> 
-    Age : <%= player.age %> <br> 
+    Age : <%= player.date_of_birth %> <br> 
 <% end %>
 
 </body>
