--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,8 +1,8 @@
 <nav class="topnav" style="background-color: green"> 
   <a href="/teams", style="color:black">View All Teams</a> 
   <a href="/players">View All Players</a> 
-  <a href="/users/:id/teams", style="color:black">View My Teams</a> 
+  <!-- <a href="/user/:id/teams", style="color:black">View My Teams</a> -->
 
   
-  <a href="/logout"> Logout </a> 
+  <a href="/logout", style="color:red"> Logout </a> 
 </nav>  
