--- a/app/views/player_teams/_form.html.erb
+++ b/app/views/player_teams/_form.html.erb
@@ -12,5 +12,5 @@
 
         <%= f.hidden_field :team_id %>   
         
-        <%= f.submit %> 
+        <%= f.submit "Add Player" %> 
     <% end %> 
