--- a/app/views/player_teams/new.html.erb
+++ b/app/views/player_teams/new.html.erb
@@ -1,9 +1,9 @@
 <%= render 'layouts/navbar' %> 
 
-<body class="text-center">
+<div class="text-center">
 
 <h1> New Player Team </h1>
 
 <%= render 'form' %>
 
-</body>
+</div>
