--- a/app/views/player_teams/_form.html.erb
+++ b/app/views/player_teams/_form.html.erb
@@ -11,6 +11,6 @@
         <%= f.text_area :year %> <br>
 
         <%= f.hidden_field :team_id %>   
-        
+        <%= f.hidden_field :player_id %>
         <%= f.submit "Add Player" %> 
     <% end %> 
