--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="topnav" style="background-color: green"> 
   <a href="/teams", style="color:black">View All Teams</a> 
   <a href="/players">View All Players</a> 
-  <!-- <a href="/user/:id/teams", style="color:black">View My Teams</a> -->
+   <a href="/users/#{:user_id}/teams", style="color:black">View My Teams</a> 
 
   
   <a href="/logout", style="color:red"> Logout </a> 
