--- a/app/views/player_teams/_form.html.erb
+++ b/app/views/player_teams/_form.html.erb
@@ -1,5 +1,6 @@
 <%= render 'layouts/errors', object: @player_team %>
         
+    <%= button_to "Register New Player", new_player_path %> <br> 
 
     <%= form_for(@player_team) do |f| %> 
   
