--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -10,7 +10,7 @@
 
 <h2> Players </h2> 
   <ul>
-  <% @team.player_teams.each do |player| %> 
+  <% @team.players.each do |player| %> 
     <li><%= player.name %></li>
   <% end %>
   </ul>  <br>
